--- a/index.html
+++ b/index.html
@@ -178,13 +178,17 @@
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-check"></i>
-              Linux ∙ Redes ∙ C/C# ∙ Shell Script</li>
-            <li>
-              <i class="fa-li fa fa-check"></i>
               Python ∙ Pandas ∙ SQL ∙ Power BI</li>
             <li>
               <i class="fa-li fa fa-check"></i>
+              Linux ∙ Redes ∙ C/C# ∙ Shell Script
+              </li>
+            <li>
+              <i class="fa-li fa fa-check"></i>
               HTML ∙ CSS ∙ JavaScript ∙ NodeJS</li>
+              <li>
+                <i class="fa-li fa fa-check"></i>
+                Unity ∙ Unreal ∙ Godot</li>
           </ul>
           <br/>
           <div class="subheading mb-3">Workflow</div>
@@ -210,7 +214,7 @@
               Mentor de Programação - Equipe Taubatexas FRC Competition.</li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              Equipe de Competição de Programação - IFSP.</li>
+              Equipe de Maratona de Programação - IFSP.</li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
               Equipe de Competição de Robótica - IFSP.</li>
