feat: atualizando dados

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
               </p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">Março 2024 - Presente</span>
+              <span class="text-primary">Março 2024 - Julho 2024</span>
             </div>
           </div>
 
@@ -178,17 +178,14 @@
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-check"></i>
-              Python ∙ Pandas ∙ SQL ∙ Power BI</li>
+              Python ∙ Linguagem SQL ∙ Power BI</li>
             <li>
               <i class="fa-li fa fa-check"></i>
               Linux ∙ Redes ∙ C/C# ∙ Shell Script
               </li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              HTML ∙ CSS ∙ JavaScript ∙ NodeJS</li>
-              <li>
-                <i class="fa-li fa fa-check"></i>
-                Unity ∙ Unreal ∙ Godot</li>
+              HTML ∙ CSS ∙ JavaScript ∙ React ∙ NodeJS</li>
           </ul>
           <br/>
           <div class="subheading mb-3">Workflow</div>
@@ -209,10 +206,6 @@
         <div class="my-auto">
           <h2 class="mb-5">Atividades Extracurriculares & Certificações</h2>
           <ul class="fa-ul mb-0">
-            <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              Mentor de Programação - Equipe Taubatexas FRC Competition.</li>
-            <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
               Equipe de Maratona de Programação - IFSP.</li>
             <li>
